--- a/pixelhub/index.html
+++ b/pixelhub/index.html
@@ -9,5 +9,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./serviceWorker.js')
+            .then((reg) => {
+              console.log("Service worker registered");
+            })
+            .catch((err) => {
+              console.log("Error in service worker", err);
+            });
+        });
+      }
+    </script> -->
   </body>
 </html>
